fix: Remove questionable extra pub body margin-top on mobile

--- a/client/containers/Pub/PubDocument/pubDocument.scss
+++ b/client/containers/Pub/PubDocument/pubDocument.scss
@@ -59,11 +59,6 @@
 				display: none;
 			}
 		}
-		.pub-document-component {
-			.main-content {
-				margin-top: 2em;
-			}
-		}
 	}
 }
 
